--- a/metricbeat/module/haproxy/info/_meta/fields.yml
+++ b/metricbeat/module/haproxy/info/_meta/fields.yml
@@ -14,6 +14,11 @@
       description: >
         Process number.
 
+    - name: threads
+      type: long
+      description: >
+        Number of threads.
+
     - name: pid
       type: alias
       path: process.pid
@@ -24,6 +29,41 @@
     - name: run_queue
       type: long
       description: >
+
+    - name: stopping
+      type: long
+      description: >
+        Number of stopping jobs.
+
+    - name: jobs
+      type: long
+      description: >
+        Number of all jobs.
+
+    - name: unstoppable_jobs
+      type: long
+      description: >
+        Number of unstoppable jobs.
+
+    - name: listeners
+      type: long
+      description: >
+        Number of listeners.
+
+    - name: dropped_logs
+      type: long
+      description: >
+        Number of dropped logs.
+
+    - name: busy_polling
+      type: long
+      description: >
+        Number of busy polling.
+
+    - name: failed_resolutions
+      type: long
+      description: >
+        Number of failed resolutions.
 
     - name: tasks
       type: long
@@ -39,6 +79,61 @@
       format: bytes
       description: >
         Maximum amount of memory usage in bytes (the 'Memmax_MB' value converted to bytes).
+
+
+    - name: bytes
+      type: group
+      fields:
+
+        - name: out
+          type: group
+          fields:
+
+            - name: total
+              type: long
+              description: >
+                Number of bytes sent out.
+
+            - name: rate
+              type: long
+              description: >
+                Average bytes output rate.
+
+
+    - name: peers
+      type: group
+      fields:
+
+        - name: active
+          type: long
+          description: >
+            Number of active peers.
+
+        - name: connected
+          type: long
+          description: >
+            Number of connected peers.
+
+
+    - name: pool
+      type: group
+      fields:
+
+        - name: allocated
+          type: long
+          description: >
+            Size of the allocated pool.
+
+        - name: used
+          type: long
+          description: >
+            Number of members used from the allocated pool.
+
+        - name: failed
+          type: long
+          description: >
+            Number of failed connections to pool members.
+
 
     - name: ulimit_n
       type: long
