[Ingest Manager] Moved from stream to dataset (#18967)
[Ingest Manager] Moved from stream to dataset (#18967)

--- a/x-pack/elastic-agent/pkg/agent/program/testdata/constraints_config-filebeat.yml
+++ b/x-pack/elastic-agent/pkg/agent/program/testdata/constraints_config-filebeat.yml
@@ -8,6 +8,12 @@ filebeat:
     index: logs-generic-default
     processors:
       - add_fields:
+          target: "dataset"
+          fields:
+            type: logs
+            name: generic
+            namespace: default
+      - add_fields:
           target: "stream"
           fields:
             type: logs
