--- a/deploy/cloudfoundry/filebeat/filebeat.yml
+++ b/deploy/cloudfoundry/filebeat/filebeat.yml
@@ -12,6 +12,7 @@ filebeat.inputs:
     #uaa_address: ${UAA_ADDRESS}
     #rlp_address: ${RLP_ADDRESS}
     #shard_id: ${SHARD_ID}
+    #version: v1
 
 
 #================================ Outputs =====================================
