--- a/journalbeat/journalbeat.yml
+++ b/journalbeat/journalbeat.yml
@@ -188,6 +188,28 @@ processors:
 # uncomment the following line.
 #monitoring.elasticsearch:
 
+# ============================== Instrumentation ===============================
+
+# Instrumentation support for the journalbeat.
+#instrumentation:
+    # Set to true to enable instrumentation of journalbeat.
+    #enabled: false
+
+    # Environment in which journalbeat is running on (eg: staging, production, etc.)
+    #environment: ""
+
+    # APM Server hosts to report instrumentation results to.
+    #hosts:
+    #  - http://localhost:8200
+
+    # API Key for the APM Server(s).
+    # If api_key is set then secret_token will be ignored.
+    #api_key:
+
+    # Secret token for the APM Server(s).
+    #secret_token:
+
+
 # ================================= Migration ==================================
 
 # This allows to enable 6.7 migration aliases
