--- a/.ci/jobs/build-it-docker-images.yml
+++ b/.ci/jobs/build-it-docker-images.yml
@@ -5,6 +5,11 @@
     description: Job to pre-build docker images used in integration tests.
     view: Beats
     project-type: pipeline
+    parameters:
+      - string:
+          name: BRANCH_REFERENCE
+          default: master
+          description: the Git branch specifier
     pipeline-scm:
       script-path: .ci/build-docker-images.groovy
       scm:
@@ -17,6 +22,6 @@
             credentials-id: f6c7695a-671e-4f4f-a331-acdce44ff9ba
             reference-repo: /var/lib/jenkins/.git-references/beats.git
             branches:
-              - 'master'
+              - $BRANCH_REFERENCE
     triggers:
       - timed: 'H H(0-5) * * 1-5'
